[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/FontH1.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/abc_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/abcs_screen.gd" type="Script" id=3]
[ext_resource path="res://ui/h_flow_container/h_flow_container.gd" type="Script" id=4]
[ext_resource path="res://ui/texno_theme.tres" type="Theme" id=5]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1229.13, 600.33 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxLayout" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="VBoxSide" type="VBoxContainer" parent="HBoxLayout"]
margin_right = 90.0
margin_bottom = 580.0
custom_constants/separation = 10

[node name="ButtonReload" type="Button" parent="HBoxLayout/VBoxSide"]
margin_right = 90.0
margin_bottom = 29.0
text = "reload"

[node name="ButtonOpenDir" type="Button" parent="HBoxLayout/VBoxSide"]
margin_top = 39.0
margin_right = 90.0
margin_bottom = 68.0
text = "open dir"

[node name="ButtonTestServer" type="Button" parent="HBoxLayout/VBoxSide"]
margin_top = 78.0
margin_right = 90.0
margin_bottom = 107.0
text = "test server"

[node name="ScrollAbcs" type="ScrollContainer" parent="HBoxLayout"]
margin_left = 130.0
margin_right = 1004.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 1581.48, 289.13 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginAbcs" type="MarginContainer" parent="HBoxLayout/ScrollAbcs"]
margin_right = 874.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxAbcs" type="VBoxContainer" parent="HBoxLayout/ScrollAbcs/MarginAbcs"]
margin_left = 10.0
margin_top = 10.0
margin_right = 864.0
margin_bottom = 570.0
rect_min_size = Vector2( 600, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="LabelUserAbcs" type="Label" parent="HBoxLayout/ScrollAbcs/MarginAbcs/VBoxAbcs"]
margin_right = 854.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
text = "user alphabets:"

[node name="HFlowUserAbcs" type="Container" parent="HBoxLayout/ScrollAbcs/MarginAbcs/VBoxAbcs"]
margin_top = 55.0
margin_right = 854.0
margin_bottom = 155.0
size_flags_horizontal = 3
script = ExtResource( 4 )
horizontal_margin = 10.0
vertical_margin = 10.0

[node name="AbcButton" parent="HBoxLayout/ScrollAbcs/MarginAbcs/VBoxAbcs/HFlowUserAbcs" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 200.0
margin_bottom = 100.0

[node name="LabelModsAbcs" type="Label" parent="HBoxLayout/ScrollAbcs/MarginAbcs/VBoxAbcs"]
margin_top = 165.0
margin_right = 854.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 1 )
text = "mods alphabets:"

[node name="HFlowModsAbcs" type="Container" parent="HBoxLayout/ScrollAbcs/MarginAbcs/VBoxAbcs"]
margin_top = 220.0
margin_right = 854.0
margin_bottom = 320.0
size_flags_horizontal = 3
script = ExtResource( 4 )
horizontal_margin = 10.0
vertical_margin = 10.0

[node name="AbcButton" parent="HBoxLayout/ScrollAbcs/MarginAbcs/VBoxAbcs/HFlowModsAbcs" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 200.0
margin_bottom = 100.0
